updates on June 6th

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     font-family: 'Noto Sans HK', sans-serif;
     
     }
-
+f
     .input-field inline{
         width: 5px;
     }
@@ -97,3 +97,8 @@
       margin: 10%
     }  
 
+
+  .form-row{
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
